# automated-ai-customer-support

./: README.md  api.py  main.py  ollama_test.py  pyproject.toml  ui.py
_learning/: ARCHITECTURE.md  PYDANTIC_AI_AGENT_GUIDE.md  PYTHON_CONCEPTS.md
src/: agents.py  config.py  db.py  logger.py  schemas.py  tools.py  triage_service.py
tests/: test_business_rules.py  test_validators.py
